--- a/src/main/resources/templates/customer/index.html
+++ b/src/main/resources/templates/customer/index.html
@@ -2,23 +2,45 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" >
 <head>
 <meta charset="UTF-8">
-<link th:href="@{webjars/bootstrap/4.5.3/css/bootstrap.min.css}" rel="stylesheet"/>
+<link th:href="@{/webjars/bootstrap/4.5.3/css/bootstrap.min.css}" rel="stylesheet"/>
+<link th:href="@{/css/stylesheet.css}" rel="stylesheet"/>
 <script th:src="@{/webjars/jquery/3.4.1/jquery.min.js}"></script>
-
 <title th:text="#{customer.index.title}">customer.index.title</title>
 </head>
 <body>
-	<div>
+<a th:href="@{/customer}"><img th:src="@{/images/comsize.png}" width= 120px></a>
+<div class="header">
+	<div class="container ">
+		<div class="row">
+			<div class="col-xs-12 title">
+				<p th:text="#{customer.index.title}" class="title"></p>
+			</div>
+		</div>
+	</div>
+</div>
+	<div class="container">
 		<!-- 削除・空・エラーメッセージを渡されたら表示します(RedirectAttributeで渡される) -->
 		
-		<p th:if="${errorMessage}" th:text="${errorMessage}">error message</p>
-		<p th:if="${deleteMessage}" th:text="${deleteMessage}">delete message</p>
-		<p th:if="${emptyMessage}" th:text="${emptyMessage}">empty Message</p>
+		<p style="color: red" th:if="${errorMessage}" th:text="${errorMessage}">error message</p>
+		<p style="color: red" th:if="${deleteMessage}" th:text="${deleteMessage}">delete message</p>
+		<p style="color: red" th:if="${emptyMessage}" th:text="${emptyMessage}">empty Message</p>
 	</div>
-	<div>
-		<a class="btn btn-primary btn-sm" href="/customer/create" th:href="@{/customer/create}" th:text="#{customer.create.title}">create</a></li>
+<div class="headerNav">
+	<div class="container">
+		<div class="row headerNavBox">
+			<a style="color: #3366FF"class="col-xs-6 col-sm-3 headerNavBtn center" href="/customer" th:href="@{/customer}" th:text="#{customer.index.title}">
+					index
+			</a>
+			<a style="color: #3366FF"class="col-xs-6 col-sm-3 headerNavBtn center" href="/customer/create" th:href="@{/customer/create}" th:text="#{customer.create.title}">
+					create
+			</a>
+			
+		</div>
 	</div>
-	<div>
+</div>
+<br>
+<div class="container">
+	<div class="row">
 		<form class="form-inline" action="/customer/search" th:action="@{/customer/search}" method="post" th:object="${customerForm}">
 			<div class= "form-group">
 			<select class="form-control" name="key" th:field="*{key}" >
@@ -45,8 +67,73 @@
 		
 		</form>
 	</div>
+</div>
+
+	
+	<div class="container w-100 p-3">
 	<div class="row">
-	<div class="col-md-6">
+	<div class="table-responsive">
+	<table class="table table-hover table-sm">
+		<tr class="table-info">
+			<!-- 文字化け、??～～～??、「□」などが表示される場合、文字コードや半角全角をチェック（特に全角の改行は「□」となって化けて出てくる -->
+			
+			<th　th:text="#{cust_no}"></th>
+			<th th:text="#{last_nm}"></th>
+			<th th:text="#{first_nm}"></th>
+			<!-- <th th:text="#{last_nm_kana}"></th> -->
+			<!-- <th th:text="#{first_nm_kana}"></th> -->
+			<th th:text="#{gender_cd}"></th>
+			<th th:text="#{mail_address}"></th>
+			<th th:text="#{tel_no}"></th>
+			<!-- <th th:text="#{birth_date}"></th> -->
+			<th th:text="#{home_address}"></th>
+			<!-- <th th:text="#{post_number}"></th> -->
+			<th th:text="#{reg_date}"></th>
+			
+		</tr>
+	
+		<tbody>
+		<!-- Controllerから渡された、Beanが入っているListを取り出し、Beanに格納された各フィールドを表示します -->
+		
+		<tr th:each="index : ${list}" th:object="${list}">
+			<td>
+				<a href="/customer/${index.cust_no}" th:href="@{/customer/{cust_no}(cust_no=${index.cust_no})}" th:text="${index.cust_no}">1</a>
+			</td>
+			<td th:text="${index.last_nm}">1</td>
+			<td th:text="${index.first_nm}">1</td>
+			<!-- <td th:text="${index.last_nm_kana}">1</td> -->
+			<!-- <td th:text="${index.first_nm_kana}">1</td> -->
+			
+			<!-- DB上では性別はIntegerで管理されているのでth:ifを使います -->
+			<td>
+				<span th:if="${index.gender_cd eq 1}" ><div>男</div></span>
+				<span th:if="${index.gender_cd eq 2}" ><div>女</div></span>
+				<span th:if="${index.gender_cd eq 3}" ><div>未定義</div></span>
+			</td>
+			<td th:text="${index.mail_address}">1</td>
+			<td th:text="${index.tel_no}">1</td>
+			<!-- <td th:text="${index.birth_date}">1</td> -->
+			<td th:text="${index.home_address}">1</td>
+			<!-- <td th:text="${index.post_number}">1</td> -->
+			<td th:text="${index.reg_date}">1</td>
+			
+				<!--  <a class="btn btn-primary btn-sm" href="/customer/edit/${index.cust_no}" th:href="@{/customer/edit/{cust_no}(cust_no=${index.cust_no})}">編集</a>-->
+				<!--  <a class="btn btn-danger btn-sm"href="/customer/delete/${index.cust_no}" th:href="@{/customer/delete/{cust_no}(cust_no=${index.cust_no})}">削除</a>-->
+			
+		</tr>
+		</tbody>
+	</table>
+	</div>
+	</div>
+	</div>
+<div class="container ">
+	<form role="form" id="logout" th:action="@{/logout}" method="post">
+    <button type="submit" class="btn btn-secondary right">ログアウト</button>
+</form>
+</div>
+	<div class="container">
+	<div class="row">
+	<div>
 		<form  action="/customer/sort" th:action="@{/customer-sort}" method="post" th:object="${customerForm}">
 			<div class="input-group">
 			<select class="form-control" name="key" th:field="*{key}">
@@ -74,65 +161,6 @@
 		</form>
 	</div>
 	</div>
-	
-	<div class="container">
-	<div class="row">
-	<div class="table-responsive">
-	<table class="table table-striped table-bordered">
-		<tr>
-			<!-- 文字化け、??～～～??、「□」などが表示される場合、文字コードや半角全角をチェック（特に全角の改行は「□」となって化けて出てくる -->
-			
-			<th　th:text="#{cust_no}"></th>
-			<th th:text="#{last_nm}"></th>
-			<th th:text="#{first_nm}"></th>
-			<th th:text="#{last_nm_kana}"></th>
-			<th th:text="#{first_nm_kana}"></th>
-			<th th:text="#{gender_cd}"></th>
-			<th th:text="#{mail_address}"></th>
-			<th th:text="#{tel_no}"></th>
-			<th th:text="#{birth_date}"></th>
-			<th th:text="#{home_address}"></th>
-			<th th:text="#{post_number}"></th>
-			<th th:text="#{reg_date}"></th>
-			<th></th>
-		</tr>
-		
-		<!-- Controllerから渡されたBeanが入っているListを取り出し、Beanに格納された各フィールドを表示します -->
-		
-		<tr th:each="index : ${list}" th:object="${list}">
-			<td>
-				<a href="/customer/${index.cust_no}" th:href="@{/customer/{cust_no}(cust_no=${index.cust_no})}" th:text="${index.cust_no}">1</a>
-			</td>
-			<td th:text="${index.last_nm}">1</td>
-			<td th:text="${index.first_nm}">1</td>
-			<td th:text="${index.last_nm_kana}">1</td>
-			<td th:text="${index.first_nm_kana}">1</td>
-			
-			<!-- DB上では性別はIntegerで管理されているのでth:ifを使います -->
-			<td>
-				<span th:if="${index.gender_cd eq 1}" ><div>男</div></span>
-				<span th:if="${index.gender_cd eq 2}" ><div>女</div></span>
-				<span th:if="${index.gender_cd eq 3}" ><div>未定義</div></span>
-			</td>
-			<td th:text="${index.mail_address}">1</td>
-			<td th:text="${index.tel_no}">1</td>
-			<td th:text="${index.birth_date}">1</td>
-			<td th:text="${index.home_address}">1</td>
-			<td th:text="${index.post_number}">1</td>
-			<td th:text="${index.reg_date}">1</td>
-			<td>
-				<a class="btn btn-primary btn-sm" href="/customer/edit/${index.cust_no}" th:href="@{/customer/edit/{cust_no}(cust_no=${index.cust_no})}">編集</a>
-				<a class="btn btn-danger btn-sm"href="/customer/delete/${index.cust_no}" th:href="@{/customer/delete/{cust_no}(cust_no=${index.cust_no})}">削除</a>
-			</td>
-		</tr>
-		
-	</table>
-	</div>
-	</div>
-	</div>
-	<form role="form" id="logout" th:action="@{/logout}" method="post">
-    <button type="submit">ログアウト</button>
-</form>
-	
+</div>
 </body>
 </html>
