--- a/src/main/resources/static/css/stylesheet.css
+++ b/src/main/resources/static/css/stylesheet.css
@@ -27,3 +27,20 @@
 	display: block;
 	margin: 0 0 0 auto;
 }
+.tablesorter-headerUnSorted{
+	background-image: url('images/sort.gif');
+	background-repeat: no-repeat;
+	background-position: center right;
+}
+.tablesorter-headerAsc{
+	background-image: url('images/sort_a.gif');
+	background-repeat: no-repeat;
+	background-position: center right;
+	border-bottom: #000 2px solid;
+}
+.tablesorter-headerDesc{
+	background-image: url('images/sort_d.gif');
+	background-repeat: no-repeat;
+	background-position: center right;
+	border-bottom: #000 2px solid;
+}
