--- a/src/main/resources/templates/customer/index.html
+++ b/src/main/resources/templates/customer/index.html
@@ -4,8 +4,15 @@
 <meta charset="UTF-8">
 <link th:href="@{/webjars/bootstrap/4.5.3/css/bootstrap.min.css}" rel="stylesheet"/>
 <link th:href="@{/css/stylesheet.css}" rel="stylesheet"/>
+
 <script th:src="@{/webjars/jquery/3.4.1/jquery.min.js}"></script>
+<script th:src="@{/js/jquery.tablesorter.min.js}"></script>
 <title th:text="#{customer.index.title}">customer.index.title</title>
+<script>
+$(document).ready(function(){
+	$('#index-table').tablesorter();
+});
+</script>
 </head>
 <body>
 <a th:href="@{/customer}"><img th:src="@{/images/comsize.png}" width= 120px></a>
@@ -73,7 +80,8 @@
 	<div class="container w-100 p-3">
 	<div class="row">
 	<div class="table-responsive">
-	<table class="table table-hover table-sm">
+	<table class="table table-hover table-sm" id="index-table">
+		<thead>
 		<tr class="table-info">
 			<!-- 文字化け、??～～～??、「□」などが表示される場合、文字コードや半角全角をチェック（特に全角の改行は「□」となって化けて出てくる -->
 			
@@ -91,11 +99,12 @@
 			<th th:text="#{reg_date}"></th>
 			
 		</tr>
-	
+		</thead>
 		<tbody>
 		<!-- Controllerから渡された、Beanが入っているListを取り出し、Beanに格納された各フィールドを表示します -->
 		
 		<tr th:each="index : ${list}" th:object="${list}">
+		
 			<td>
 				<a href="/customer/${index.cust_no}" th:href="@{/customer/{cust_no}(cust_no=${index.cust_no})}" th:text="${index.cust_no}">1</a>
 			</td>
