--- a/src/main/resources/templates/customer/create.html
+++ b/src/main/resources/templates/customer/create.html
@@ -8,8 +8,26 @@
 <title th:text="#{customer.create.title}">customer.create.title</title>
 </head>
 <body>
-<a th:href="@{/customer}"><img th:src="@{/images/comsize.png}" width= 120px></a>
-<div class="header">
+<div class="sticky-top" style="background-color: white">
+	
+	<div class="headerNav">
+		<div class="container">
+			<div class="row headerNavBox">
+			<a class="pull-left" th:href="@{/customer}"><img th:src="@{/images/comsize.png}" width= 120px></a>
+			<a style="color: #3366FF"class="col-xs-6 col-sm-3 headerNavBtn center" href="/customer" th:href="@{/customer}" th:text="#{customer.index.title}">
+					index
+			</a>
+			<a style="color: #3366FF"class="col-xs-6 col-sm-3 headerNavBtn center" href="/customer/create" th:href="@{/customer/create}" th:text="#{customer.create.title}">
+					create
+			</a>
+			</div>
+		</div>
+	</div>
+	
+	<div class="header">
+	</div>
+</div>
+<div>
 	<div class="container ">
 		<div class="row">
 			<div class="col-xs-12 title">
@@ -19,25 +37,16 @@
 	</div>
 </div>
 	<div class="container">
+		<div class="col-xm-12 center">
 		<!-- 削除・空・エラーメッセージを渡されたら表示します(RedirectAttributeで渡される) -->
 		
 		<p style="color: red" th:if="${errorMessage}" th:text="${errorMessage}">error message</p>
 		<p style="color: red" th:if="${deleteMessage}" th:text="${deleteMessage}">delete message</p>
 		<p style="color: red" th:if="${emptyMessage}" th:text="${emptyMessage}">empty Message</p>
-	</div>
-<div class="headerNav">
-	<div class="container">
-		<div class="row headerNavBox">
-			<a style="color: #3366FF"class="col-xs-6 col-sm-3 headerNavBtn center" href="/customer" th:href="@{/customer}" th:text="#{customer.index.title}">
-					index
-			</a>
-			<a style="color: #3366FF"class="col-xs-6 col-sm-3 headerNavBtn center" href="/customer/create" th:href="@{/customer/create}" th:text="#{customer.create.title}">
-					create
-			</a>
-			
 		</div>
 	</div>
-</div>
+
+<br>
 <div class="container">
 	<div class="row ">
 	<div class="col-xm-12 center">
