--- a/src/main/resources/templates/customer/edit.html
+++ b/src/main/resources/templates/customer/edit.html
@@ -8,12 +8,30 @@
 <title th:text="#{customer.detail.title}">customer.detail.title</title>
 </head>
 <body>
-<a th:href="@{/customer}"><img th:src="@{/images/comsize.png}" width= 120px></a>
-<div class="header">
+<div class="sticky-top" style="background-color: white">
+	
+	<div class="headerNav">
+		<div class="container">
+			<div class="row headerNavBox">
+			<a class="pull-left" th:href="@{/customer}"><img th:src="@{/images/comsize.png}" width= 120px></a>
+			<a style="color: #3366FF"class="col-xs-6 col-sm-3 headerNavBtn center" href="/customer" th:href="@{/customer}" th:text="#{customer.index.title}">
+					index
+			</a>
+			<a style="color: #3366FF"class="col-xs-6 col-sm-3 headerNavBtn center" href="/customer/create" th:href="@{/customer/create}" th:text="#{customer.create.title}">
+					create
+			</a>
+			</div>
+		</div>
+	</div>
+	
+	<div class="header">
+	</div>
+</div>
+<div>
 	<div class="container ">
 		<div class="row">
 			<div class="col-xs-12 title">
-				<p th:text="#{customer.detail.title}" class="title"></p>
+				<p th:text="#{customer.edit.title}" class="title"></p>
 			</div>
 		</div>
 	</div>
@@ -25,19 +43,8 @@
 		<p style="color: red" th:if="${deleteMessage}" th:text="${deleteMessage}">delete message</p>
 		<p style="color: red" th:if="${emptyMessage}" th:text="${emptyMessage}">empty Message</p>
 	</div>
-<div class="headerNav">
-	<div class="container">
-		<div class="row headerNavBox">
-			<a style="color: #3366FF"class="col-xs-6 col-sm-3 headerNavBtn center" href="/customer" th:href="@{/customer}" th:text="#{customer.index.title}">
-					index
-			</a>
-			<a style="color: #3366FF"class="col-xs-6 col-sm-3 headerNavBtn center" href="/customer/create" th:href="@{/customer/create}" th:text="#{customer.create.title}">
-					create
-			</a>
-			
-		</div>
-	</div>
-</div>
+
+<br>
 <div class="container">
 <div class="row">
 	<div class="col-xm-12 center">
