--- a/src/main/resources/templates/customer/detail.html
+++ b/src/main/resources/templates/customer/detail.html
@@ -13,7 +13,7 @@
 	<div class="headerNav">
 		<div class="container">
 			<div class="row headerNavBox">
-			<a class="pull-left" th:href="@{/customer}"><img th:src="@{/images/comsize.png}" width= 120px></a>
+			<a class="pull-left" href="http://www.comsize.co.jp"><img th:src="@{/images/comsize.png}" width= 120px></a>
 			<a style="color: #3366FF"class="col-xs-6 col-sm-3 headerNavBtn center" href="/customer" th:href="@{/customer}" th:text="#{customer.index.title}">
 					index
 			</a>
