ログイン機能の衝突修正

--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -50,7 +50,7 @@
           <div class="form-group">
             <label class="control-label" for="password" th:text="#{login.password}"></label>
             <div>
-            	<input class="form-control" id="password"  type="text" name="password" value="" required/>
+            	<input class="form-control" id="password"  type="password" name="password" value="" required/>
             </div>
           </div>
 		</table>
