ログインバリデーションとUI改善

--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -30,6 +30,9 @@
   	<p style="color: red"th:text="#{login.failure}"/>
   </div>
   
+  <div th:if="${saveMessage}">
+  	<p style="color: red" th:text="#{login.save}" />
+  </div>
   
  </div>
 </div>
