--- a/src/main/resources/templates/auth/login-edit.html
+++ b/src/main/resources/templates/auth/login-edit.html
@@ -5,7 +5,7 @@
 <link th:href="@{/webjars/bootstrap/4.5.3/css/bootstrap.min.css}" rel="stylesheet"/>
 <link th:href="@{/css/stylesheet.css}" rel="stylesheet"/>
 <script th:src="@{/webjars/jquery/3.4.1/jquery.min.js}"></script>
-<title >パスワード変更</title>
+<title >編集</title>
 </head>
 <body>
 <a th:href="@{/customer}"><img th:src="@{/images/comsize.png}" width= 120px></a>
@@ -35,8 +35,9 @@
 		<form class="form-inline" th:action="@{/login-editPs}" method="post" th:object="${loginUser}">
 			<div class="form-group">
 				<div>
-				<input class="form-control" id="user_id" type="text" name="user_id" th:fields="*{user_id}" required/>
+				<input class="form-control" id="user_id" type="text" name="user_id" th:fields="*{user_id}" maxlength="24" pattern="^[0-9A-Za-z]+$" placeholder="半角英数24字以内" required>
 				</div>
+				
 				<div>
 				<input class="btn btn-primary" type="submit" th:value="送信" />
 				</div>
@@ -62,8 +63,9 @@
 				<label class="control-label" th:text="#{login.password}"></label>
 				</div>
 				<div>
-				<input class="form-control" id="password" type="password" name="password" th:fields="*{password}" required/>
+				<input class="form-control" id="password" type="password" name="password" th:fields="*{password}" maxlength="32" placeholder="半角英数32字以内" required/>
 				</div>
+				
 				<div>
 				<input class="btn btn-primary" type="submit" th:value="送信" />
 				</div>
@@ -81,7 +83,8 @@
 				<label  class="control-label" th:text="#{login.username}"></label>
 				</div>
 				<div>
-				<input class="form-control" id="user_id" type="text" name="user_id" th:field="*{user_id}" />
+				<input class="form-control" id="user_id" type="text" name="user_id" th:field="*{user_id}" maxlength="24" pattern="^[0-9A-Za-z]+$" placeholder="半角英数24字以内" required/>
+				
 				</div>
 			</div>
 			<div class="form-group">
@@ -89,7 +92,8 @@
 				<label class="comntrol-label" th:text="#{login.password}"></label>
 				</div>
 				<div>
-				<input class="form-control" id="password" type="password" name="password" th:fields="*{password}" required/>
+				<input class="form-control" id="password" type="password" name="password" th:fields="*{password}" maxlength="32" placeholder="半角英数32字以内" required/>
+				
 				</div>
 			</div>
 				<div>
