--- a/src/main/resources/templates/customer/create.html
+++ b/src/main/resources/templates/customer/create.html
@@ -59,7 +59,7 @@
 		<th>
 			<div class="form-group">
 				<label class="control-label" for="id_cust_no" th:text="#{cust_no}" >cust_no</label>
-				<input class="form-control" id="id_cust_no" type="text" name="check_no" th:field="*{check_no}" />
+				<input class="form-control" id="id_cust_no" type="text" name="check_no" th:field="*{check_no}" placeholder="例：1234"/>
 				<span th:if="${#fields.hasErrors('check_no')}" th:errors="*{check_no}" style="color: red"></span>
 			</div>
 		</th>
@@ -70,7 +70,7 @@
 			<div class="form-group">
 				<label class="control-label" for="id_last_nm" th:text="#{last_nm}">last_nm</label>
 				<span>
-				<input class="form-control"id="id_last_nm" type="text" name="last_nm" th:field="*{last_nm}" />
+				<input class="form-control"id="id_last_nm" type="text" name="last_nm" th:field="*{last_nm}" placeholder="例：根菜"/>
 				<span th:if="${#fields.hasErrors('last_nm')}" th:errors="*{last_nm}" style="color: red"></span>
 				</span>
 			</div>
@@ -80,7 +80,7 @@
 			<div class="form-group">
 				<label class="control-label" for="id_first_nm" th:text="#{first_nm}">first_nm</label>
 				<div>
-					<input class="form-control"  id="id_first_nm" type="text" name="first_nm" th:field="*{first_nm}" />
+					<input class="form-control"  id="id_first_nm" type="text" name="first_nm" th:field="*{first_nm}" placeholder="例：図子"/>
 					
 				</div>
 				<span th:if="${#fields.hasErrors('first_nm')}" th:errors="*{first_nm}" style="color: red"></span>
@@ -93,7 +93,7 @@
 			<div class="form-group">
 				<label class="control-label" for="id_last_nm_kana" th:text="#{last_nm_kana}"></label>
 				<div>
-					<input class="form-control"  id="id_last_nm_kana" type="text" name="last_nm_kana" th:field="*{last_nm_kana}" />
+					<input class="form-control"  id="id_last_nm_kana" type="text" name="last_nm_kana" th:field="*{last_nm_kana}" placeholder="例：コンサイ"/>
 					
 				</div>
 				<span th:if="${#fields.hasErrors('last_nm_kana')}" th:errors="*{last_nm_kana}" style="color: red"></span>
@@ -104,7 +104,7 @@
 			<div class="form-group">
 				<label class="control-label" for="id_first_nm_kana" th:text="#{first_nm_kana}"></label>
 				<div>
-					<input class="form-control"  id="id_first_nm_kana" type="text" name="first_nm_kana" th:field="*{first_nm_kana}" />
+					<input class="form-control"  id="id_first_nm_kana" type="text" name="first_nm_kana" th:field="*{first_nm_kana}" placeholder="例：ズコ"/>
 					
 				</div>
 				<span th:if="${#fields.hasErrors('first_nm_kana')}" th:errors="*{first_nm_kana}" style="color: red"></span>
@@ -118,7 +118,7 @@
 			<div class="form-group">
 				<label class="control-label" for="id_gender_cd" th:text="#{gender_cd}"></label>
 				<div>
-					<select class="form-control"  id="id_gender_cd"  name="gender_cd" th:field="*{gender_cd}" >
+					<select class="form-control"  id="id_gender_cd"  name="gender_cd" th:field="*{gender_cd}"  >
 						<option value="1">男</option>
 						<option value="2">女</option>
 						<option value="3">どちらでも無い</option>
@@ -136,7 +136,7 @@
 			<div class="form-group">
 				<label class="control-label" for="id_tel_no" th:text="#{tel_no}"></label>
 				<div>
-					<input class="form-control"  id="id_tel_no" type="text" name="tel_no" th:field="*{tel_no}" />
+					<input class="form-control"  id="id_tel_no" type="text" name="tel_no" th:field="*{tel_no}" placeholder="例：08000000000"/>
 					
 				</div>
 				<span th:if="${#fields.hasErrors('tel_no')}" th:errors="*{tel_no}" style="color: red"></span>
@@ -149,7 +149,7 @@
 			<div class="form-group">
 				<label class="control-label" for="id_mail_address" th:text="#{mail_address}"></label>
 				<div>
-					<input class="form-control"  id="id_mail_address" type="text" name="mail_address" th:field="*{mail_address}" />
+					<input class="form-control"  id="id_mail_address" type="text" name="mail_address" th:field="*{mail_address}" placeholder="例：comsize@comsize.com"/>
 					
 				</div>
 				<span th:if="${#fields.hasErrors('mail_address')}" th:errors="*{mail_address}" style="color: red"></span>
@@ -177,7 +177,7 @@
 				<label class="control-label" for="id_post_number" th:text="#{post_number}"></label>
 				<span class="p-country-name" style="display:none;">Japan</span>
 				<div>
-					<input class="form-control p-postal-code"  id="id_post_number" type="text" name="post_number"  th:field="*{post_number}"  />
+					<input class="form-control p-postal-code"  id="id_post_number" type="text" name="post_number"  th:field="*{post_number}"  placeholder="例：000-0000"/>
 					
 				</div>
 				<span th:if="${#fields.hasErrors('post_number')}" th:errors="*{post_number}" style="color: red"></span>
@@ -191,7 +191,7 @@
 			<div class="form-group">
 				<label class="control-label" for="id_home_address" th:text="#{home_address}"></label>
 				<div>
-					<input class="form-control p-region p-locality p-street-address p-extended-address"  id="id_home_address" type="text" size="30"name="home_address" th:field="*{home_address}" />
+					<input class="form-control p-region p-locality p-street-address p-extended-address"  id="id_home_address" type="text" size="30"name="home_address" th:field="*{home_address}" placeholder="例：東京都千代田区外神田"/>
 					
 				</div>
 				<span th:if="${#fields.hasErrors('home_address')}" th:errors="*{home_address}" style="color: red"></span>
